--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
+com.test.title=helloboot
+com.test.description=youaremyfriend
 
+logging.path=F://code_workspace//eclipse_code//FirstBoot//log
+logging.level.com.favorites=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+
+spring.datasource.url=jdbc:mysql://192.168.2.139:3306/spring-test
+spring.datasource.username=root
+spring.datasource.password=czp19950420
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql= true
+
+
+#spring.redis.database=0  
+
+spring.redis.host=192.168.2.139
+
+spring.redis.port=6379
+spring.redis.password=czp19950420
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-wait=-1
+spring.redis.timeout=5000
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.min-idle=0
